--- a/ui/projects/streampipes/shared-ui/src/lib/components/basic-view/basic-view.component.html
+++ b/ui/projects/streampipes/shared-ui/src/lib/components/basic-view/basic-view.component.html
@@ -18,9 +18,8 @@
 
 <div fxLayout="column" class="page-container">
     <div fxLayout="row" class="p-0 sp-bg-lightgray page-container-nav">
-        <div fxLayout="fill" fxFlex="100">
-            <div class="pl-5 pr-5"
-                 fxLayout="row"
+        <div fxLayout="fill" fxFlex="100" class="pl-5 pr-5">
+            <div fxLayout="row"
                  fxLayoutAlign="start center"
                  style="border-right: 2px solid var(--color-bg-2)" *ngIf="showBackLink">
                 <button mat-button
