--- a/ui/src/app/connect/components/data-marketplace/data-marketplace.component.html
+++ b/ui/src/app/connect/components/data-marketplace/data-marketplace.component.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div fxLayout="column" fxFlex="100">
-        <sp-basic-header-title-component title="Select Adapter" margin="20px 10px"></sp-basic-header-title-component>
+        <sp-basic-header-title-component title="Select Adapter"></sp-basic-header-title-component>
         <div fxFlex="100" fxLayout="column" fxLayoutAlign="center start">
             <div class="container-fluid marketplace-container" *ngIf="adapterLoadingError" fxFlex="100"
                  fxLayoutAlign="center center" fxLayout="row">
