--- a/ui/projects/streampipes/shared-ui/src/lib/components/basic-view/basic-view.component.scss
+++ b/ui/projects/streampipes/shared-ui/src/lib/components/basic-view/basic-view.component.scss
@@ -16,6 +16,15 @@
  *
  */
 
+.fixed-height {
+  flex-direction: row;
+  box-sizing: border-box;
+  display: flex;
+  flex: 1 1 100%;
+  max-height: 100%;
+  overflow-y: auto;
+}
+
 .page-container-nav {
   line-height:24px;
   height: 50px;
