--- a/ui/src/app/connect/components/existing-adapters/existing-adapters.component.html
+++ b/ui/src/app/connect/components/existing-adapters/existing-adapters.component.html
@@ -15,7 +15,7 @@
   ~ limitations under the License.
   ~
   -->
-<sp-basic-view [showBackLink]="false" padding="0" fxFlex="100" fxLayout="column">
+<sp-basic-view [showBackLink]="false" padding="0">
 
     <div nav fxFlex="100" fxLayoutAlign="start center" fxLayout="row" class="pl-10">
         <button mat-button mat-raised-button color="accent" (click)="createNewAdapter()">
@@ -25,21 +25,19 @@
                 class="filter-bar-margin"
                 (filterChangedEmitter)="applyFilter($event)">
         </sp-connect-filter-toolbar>
+        <div fxFlex fxLayout="row" fxLayoutAlign="end center">
+            <button mat-button mat-icon-button matTooltip="Refresh adapters" matTooltipPosition="below"
+                    (click)="getAdaptersRunning()">
+                <i class="material-icons">
+                    refresh
+                </i>
+            </button>
+        </div>
     </div>
     <div fxFlex="100" fxLayout="column">
-        <sp-basic-header-title-component title="My adapters" margin="20px 10px"></sp-basic-header-title-component>
+        <sp-basic-header-title-component title="My adapters"></sp-basic-header-title-component>
         <div fxFlex="100" fxLayout="row" fxLayoutAlign="center start">
-            <sp-basic-inner-panel [showTitle]="false" innerPadding="0" outerMargin="0" fxFlex="90">
-                <div header fxLayoutAlign="end center" fxFlex="100">
-                    <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
-                        <button mat-button mat-icon-button matTooltip="Refresh adapters" matTooltipPosition="above"
-                                (click)="getAdaptersRunning()">
-                            <i class="material-icons">
-                                refresh
-                            </i>
-                        </button>
-                    </div>
-                </div>
+            <sp-basic-inner-panel [showTitle]="false" innerPadding="0" outerMargin="0" fxFlex="90" [hideToolbar]="true">
                 <div fxFlex="100" fxLayout="column">
                     <div fxFlex="100" fxLayout="column">
                         <table fxFlex="100" mat-table [dataSource]="dataSource" style="width: 100%;" matSort>
