--- a/ui/src/app/connect/components/new-adapter/schema-editor/error-message/error-message.component.html
+++ b/ui/src/app/connect/components/new-adapter/schema-editor/error-message/error-message.component.html
@@ -16,14 +16,13 @@
   ~
   -->
 
-<div fxLayout="column" >
-    <div fxLayout="row" fxLayoutAlign="center center">
-        <mat-icon style="margin-top: 10px" class="md-accent">warning</mat-icon>
-        <span style="width: 10px;"></span>
-        <h3>Sorry, there was an error while guessing the schema of your configured data source...</h3>
+<div fxLayout="column" fxFlex="100">
+    <div fxLayout="row" fxLayoutAlign="center center" class="error-color" fxFlex="100">
+        <mat-icon fxLayoutAlign="start center">warning</mat-icon>
+        <div fxLayoutAlign="start center" class="error-text">&nbsp;Sorry, there was an error while guessing the schema of your configured data source...</div>
     </div>
-    <div fxLayout="row" fxLayoutAlign="center center">
-        <button mat-button class="md-accent">
+    <div fxLayout="row" fxLayoutAlign="center center" class="mt-10">
+        <button mat-button color="accent">
             <div *ngIf="!showErrorMessage" (click)="showErrorMessage = true">Show Details</div>
             <div *ngIf="showErrorMessage" (click)="showErrorMessage = false">Hide Details</div>
         </button>
