--- a/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.scss
+++ b/ui/src/app/connect/components/new-adapter/schema-editor/event-schema/event-schema.component.scss
@@ -172,8 +172,11 @@ opacity:0.5;
   color: rgba(0, 0, 0, 0.26);
 }
 
-.schema-validation {
+.mt-20 {
   margin-top: 20px;
+}
+
+.schema-validation {
   margin-bottom: 10px;
   border: 2px solid var(--color-bg-3);
   padding: 8px;
