--- a/ui/src/app/app-overview/app-overview.component.html
+++ b/ui/src/app/app-overview/app-overview.component.html
@@ -23,7 +23,7 @@
 
 
     <div fxFlex="100" fxLayout="column">
-        <h1>My apps</h1>
+        <sp-basic-header-title-component title="My apps"></sp-basic-header-title-component>
         <mat-card class="example-card" *ngFor="let app of apps">
             <div fxFlex="100" fxLayout="row">
                 <div fxFlex="75" fxLayout="column" fxLayoutAlign="center start">
