--- a/ui/src/app/dashboard/components/overview/dashboard-overview.component.html
+++ b/ui/src/app/dashboard/components/overview/dashboard-overview.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<sp-basic-view [showBackLink]="false" [padding]="">
+<sp-basic-view [showBackLink]="false" [padding]="true">
 
     <div nav fxFlex="100" fxLayoutAlign="start center" fxLayout="row" class="pl-10">
         <button mat-button mat-raised-button color="accent"
