[STREAMPIPES-537] Harmonize layout of files module

--- a/ui/src/app/connect/components/existing-adapters/existing-adapters.component.html
+++ b/ui/src/app/connect/components/existing-adapters/existing-adapters.component.html
@@ -26,7 +26,7 @@
                 (filterChangedEmitter)="applyFilter($event)">
         </sp-connect-filter-toolbar>
         <div fxFlex fxLayout="row" fxLayoutAlign="end center">
-            <button mat-button mat-icon-button matTooltip="Refresh adapters" matTooltipPosition="below"
+            <button mat-button mat-icon-button matTooltip="Refresh adapters" matTooltipPosition="below" color="accent"
                     (click)="getAdaptersRunning()">
                 <i class="material-icons">
                     refresh
