--- a/ui/src/app/connect/components/filter-toolbar/filter-toolbar.component.html
+++ b/ui/src/app/connect/components/filter-toolbar/filter-toolbar.component.html
@@ -16,9 +16,9 @@
   ~
   -->
 
-<div fxLayout="row" class="fixed-height">
+<div fxLayout="row" fxFlex="100">
 
-    <div class="data-marketplace-options-item pl-5" style="margin-top:8px;" fxLayoutAlign="start center"
+    <div class="data-marketplace-options-item pl-5 form-style" fxLayoutAlign="start center"
          fxLayout="row">
         <mat-icon color="accent">search</mat-icon>
         <mat-form-field class="form-style" color="accent" floatLabel="never">
