--- a/ui/projects/streampipes/shared-ui/src/lib/components/basic-nav-tabs/basic-nav-tabs.component.html
+++ b/ui/projects/streampipes/shared-ui/src/lib/components/basic-nav-tabs/basic-nav-tabs.component.html
@@ -18,8 +18,20 @@
 
 <div fxLayout="column" class="page-container">
     <div fxLayout="row" class="p-0 sp-bg-lightgray page-container-nav">
-        <div fxLayout="fill">
-            <div fxFlex="100" class="page-container-nav">
+            <div fxFlex="100" class="page-container-nav pr-5" fxLayout="row">
+                <div fxLayout="row"
+                     fxLayoutAlign="start center"
+                     style="border-right: 2px solid var(--color-bg-2)" *ngIf="showBackLink">
+                    <button mat-button
+                            mat-icon-button
+                            color="accent"
+                            matTooltip="Back"
+                            (click)="navigateBack()"
+                            class="edit-menu-btn"
+                            data-cy="save-data-explorer-go-back-to-overview">
+                        <mat-icon>arrow_back</mat-icon>
+                    </button>
+                </div>
                 <nav mat-tab-nav-bar color="accent">
                     <a mat-tab-link *ngFor="let item of spNavigationItems"
                        (click)="navigateTo(item)"
@@ -27,8 +39,9 @@
                         <span class="upper-case">{{item.itemTitle}}</span>
                     </a>
                 </nav>
+                <span fxFlex></span>
+                <ng-content select="[nav]" fxFlex="100" fxLayout="row" fxLayoutAlign="end center"></ng-content>
             </div>
-        </div>
     </div>
 
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100">
