--- a/ui/projects/streampipes/shared-ui/src/lib/components/basic-inner-panel/basic-inner-panel.component.html
+++ b/ui/projects/streampipes/shared-ui/src/lib/components/basic-inner-panel/basic-inner-panel.component.html
@@ -19,8 +19,10 @@
 <div fxLayout="column" fxFlex="100" class="panel-outer" [ngStyle]="{margin: outerMargin}">
     <div class="general-panel-header" fxLayout="row" fxFlex="100" fxLayoutAlign="start center" *ngIf="!hideToolbar">
         <div fxLayout="fill" fxFlex="100">
+            <div fxLayoutAlign="start center" fxLayout="row">
             <div class="content-box-title" *ngIf="showTitle">{{panelTitle}}</div>
-            <ng-content select="[header]" fxFlex></ng-content>
+            </div>
+            <ng-content select="[header]" fxFlex class="pr-5"></ng-content>
         </div>
     </div>
 
