--- a/ui/src/app/pipeline-details/components/edit/quickedit.component.html
+++ b/ui/src/app/pipeline-details/components/edit/quickedit.component.html
@@ -28,10 +28,9 @@
                           style="margin-bottom:15px;"
                           class="md-padding"
                           *ngIf="pipelineAvailable"></pipeline-preview>
-        <div class="assembly-options-preview sp-blue-bg">
-            <div fxLayout="row" fxLayoutAlign="start center">
-                <h4>Edit configuration</h4>
-                <span fxFlex></span>
+
+        <sp-basic-inner-panel panelTitle="Edit Configuration">
+            <div header fxLayoutAlign="end center" fxFlex="100" fxLayout="row">
                 <button color="accent" mat-button mat-raised-button matTooltip="Save Pipeline"
                         matTooltipPosition="above"
                         style="display:flex;align-items:center;" class="settings-bar-icon-button"
@@ -41,31 +40,31 @@
                     <span>&nbsp;Update pipeline</span>
                 </button>
             </div>
-        </div>
-        <div class="sp-blue-border">
-            <div *ngIf="selectedElement">
-                <div fxLayout="column" style="padding:5px;padding-left:10px;">
-                    <pipeline-elements-row [pipeline]="pipeline"
-                                           [element]="selectedElement"></pipeline-elements-row>
+            <div fxFlex="100" fxLayout="column">
+                <div *ngIf="selectedElement">
+                    <div fxLayout="column" style="padding:5px;padding-left:10px;">
+                        <pipeline-elements-row [pipeline]="pipeline"
+                                               [element]="selectedElement"></pipeline-elements-row>
 
-                    <div fxFlex="100" fxLayout="column"
-                         *ngIf="isInvocable">
-                        <form [formGroup]="parentForm" fxFlex="100">
-                            <app-static-property *ngFor="let config of _selectedElement.staticProperties"
-                                                 [staticProperty]="config"
-                                                 [displayRecommended]="true"
-                                                 [staticProperties]="_selectedElement.staticProperties"
-                                                 [eventSchemas]="eventSchemas"
-                                                 [parentForm]="parentForm"
-                                                 [fieldName]="config.internalName">
-                            </app-static-property>
-                        </form>
+                        <div fxFlex="100" fxLayout="column"
+                             *ngIf="isInvocable">
+                            <form [formGroup]="parentForm" fxFlex="100">
+                                <app-static-property *ngFor="let config of _selectedElement.staticProperties"
+                                                     [staticProperty]="config"
+                                                     [displayRecommended]="true"
+                                                     [staticProperties]="_selectedElement.staticProperties"
+                                                     [eventSchemas]="eventSchemas"
+                                                     [parentForm]="parentForm"
+                                                     [fieldName]="config.internalName">
+                                </app-static-property>
+                            </form>
+                        </div>
                     </div>
                 </div>
+                <div fxLayout="column" fxLayoutAlign="center center" *ngIf="!selectedElement">
+                    (select an element in the preview window to modify it)
+                </div>
             </div>
-            <div fxLayout="column" fxLayoutAlign="center center" *ngIf="!selectedElement">
-                (select an element in the preview window to modify it)
-            </div>
-        </div>
+        </sp-basic-inner-panel>
     </div>
 </sp-basic-nav-tabs>
