--- a/ui/src/scss/sp/main.scss
+++ b/ui/src/scss/sp/main.scss
@@ -915,7 +915,7 @@ md-select.md-default-theme .md-select-value.md-select-placeholder, md-select .md
   padding: 5px;
   border: 1px solid var(--color-bg-2);
   height: 300px;
-  width: 100%;
+  max-width: 100%;
 
   background-color: var(--color-bg-1);
   background-image: var(--canvas-color);
