--- a/ui/src/app/connect/components/data-marketplace/data-marketplace.component.html
+++ b/ui/src/app/connect/components/data-marketplace/data-marketplace.component.html
@@ -18,8 +18,11 @@
 
 <sp-basic-view showBackLink="true" [backLinkTarget]="['connect']" [padding]="true">
 
-    <div nav fxFlex="100">
-        <sp-connect-filter-toolbar (filterChangedEmitter)="applyFilter($event)"></sp-connect-filter-toolbar>
+    <div nav fxFlex="100" fxLayoutAlign="start center" fxLayout="row">
+        <sp-connect-filter-toolbar
+                class="filter-bar-margin"
+                (filterChangedEmitter)="applyFilter($event)">
+        </sp-connect-filter-toolbar>
         <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center"
              style="padding-left:10px;padding-right:10px;font-size:14px;" class="page-container-nav">
             <button mat-icon-button id="startAdapterTutorial3" (click)="startAdapterTutorial3()"
