--- a/ui/src/app/connect/components/existing-adapters/existing-adapters.component.html
+++ b/ui/src/app/connect/components/existing-adapters/existing-adapters.component.html
@@ -42,7 +42,7 @@
         <sp-basic-header-title-component title="My adapters"></sp-basic-header-title-component>
         <div fxFlex="100" fxLayout="row" fxLayoutAlign="center start">
             <sp-basic-inner-panel [showTitle]="false" innerPadding="0" outerMargin="0" fxFlex="90" [hideToolbar]="true">
-                <div fxFlex="100" fxLayout="column">
+                <div fxFlex="100" fxLayout="column" *ngIf="filteredAdapters.length > 0">
                     <div fxFlex="100" fxLayout="column">
                         <table fxFlex="100" mat-table [dataSource]="dataSource" style="width: 100%;" matSort>
                             <ng-container matColumnDef="start">
@@ -144,12 +144,12 @@
                                        color="accent">
                         </mat-paginator>
                     </div>
-                    <div fxFlex="100"
-                         fxLayout="column"
-                         fxLayoutAlign="center center"
-                         *ngIf="existingAdapters.length == 0">
-                        <h5>(no adapters available)</h5>
-                    </div>
+                </div>
+                <div fxFlex="100"
+                     fxLayout="column"
+                     fxLayoutAlign="center center"
+                     *ngIf="existingAdapters.length == 0">
+                    <h5>(no adapters available)</h5>
                 </div>
             </sp-basic-inner-panel>
         </div>
