--- a/ui/src/app/dashboard/components/overview/dashboard-overview.component.html
+++ b/ui/src/app/dashboard/components/overview/dashboard-overview.component.html
@@ -32,7 +32,7 @@
         <sp-basic-header-title-component title="My Dashboards"></sp-basic-header-title-component>
         <div fxFlex="100" fxLayout="row" fxLayoutAlign="center start">
             <sp-basic-inner-panel [showTitle]="false" innerPadding="0" outerMargin="0" fxFlex="90" [hideToolbar]="true">
-                <div fxFlex="100" fxLayout="column" class="w-100">
+                <div fxFlex="100" fxLayout="column" class="w-100" *ngIf="dashboards.length > 0">
 
                     <table fxFlex="95" mat-table [dataSource]="dataSource" multiTemplateDataRows>
 
@@ -100,6 +100,12 @@
                         <tr mat-row *matRowDef="let element; columns: displayedColumns;">
                         </tr>
                     </table>
+                </div>
+                <div fxFlex="100"
+                     fxLayout="column"
+                     fxLayoutAlign="center center"
+                     *ngIf="dashboards.length == 0">
+                    <h5>(no dashboards available)</h5>
                 </div>
             </sp-basic-inner-panel>
         </div>
