--- a/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
+++ b/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
@@ -32,7 +32,7 @@
         <sp-basic-header-title-component title="My Data Views"></sp-basic-header-title-component>
         <div fxFlex="100" fxLayout="row" fxLayoutAlign="center start">
             <sp-basic-inner-panel [showTitle]="false" innerPadding="0" outerMargin="0" fxFlex="90" [hideToolbar]="true">
-                <div fxFlex="100" fxLayout="column" class="w-100">
+                <div fxFlex="100" fxLayout="column" class="w-100" *ngIf="dashboards.length > 0">
                     <table mat-table [dataSource]="dataSource" multiTemplateDataRows>
 
                         <ng-container matColumnDef="name">
@@ -94,7 +94,12 @@
                         </tr>
                     </table>
                 </div>
-
+                <div fxFlex="100"
+                     fxLayout="column"
+                     fxLayoutAlign="center center"
+                     *ngIf="dashboards.length == 0">
+                    <h5>(no data views available)</h5>
+                </div>
             </sp-basic-inner-panel>
         </div>
     </div>
