[STREAMPIPES-559] Support templates for adapters

--- a/ui/src/app/core-ui/static-properties/static-runtime-resolvable-oneof-input/static-runtime-resolvable-oneof-input.component.html
+++ b/ui/src/app/core-ui/static-properties/static-runtime-resolvable-oneof-input/static-runtime-resolvable-oneof-input.component.html
@@ -38,7 +38,7 @@
                     </label>
                 </mat-radio-button>
             </div>
-            <div fxLayout="column" *ngIf="!showOptions && !loading">
+            <div fxLayout="column" *ngIf="!showOptions && !loading" class="mt-10">
                 <span>(waiting for input)</span>
             </div>
             <div fxLayout="column" *ngIf="loading">
