--- a/ui/src/app/core-ui/pipeline-element-template-config/pipeline-element-template-config.component.html
+++ b/ui/src/app/core-ui/pipeline-element-template-config/pipeline-element-template-config.component.html
@@ -19,19 +19,20 @@
 <div class="p-15">
     <div fxFlex="100" fxLayout="column">
         <h4>Basics</h4>
-        <mat-form-field fxFlex>
+        <mat-form-field fxFlex color="accent">
             <mat-label>Template name</mat-label>
             <input [(ngModel)]="template.templateName" matInput name="templateName" class="sp" required/>
         </mat-form-field>
-        <mat-form-field fxFlex>
+        <mat-form-field fxFlex color="accent">
             <mat-label>Template description</mat-label>
             <input [(ngModel)]="template.templateDescription" matInput name="templateDescription" class="sp"
                    required/>
         </mat-form-field>
-        <mat-checkbox class="sp" color="primary">Make available as pipeline element</mat-checkbox>
+<!--        <mat-checkbox class="sp" color="accent">Make available as pipeline element</mat-checkbox>-->
         <mat-divider class="divider"></mat-divider>
         <h4>Configuration</h4>
-        <div fxLayout="column" *ngFor="let config of cachedPipelineElement.staticProperties"
+        <mat-hint style="margin-bottom: 10px;">(dynamic options cannot be saved and are hidden)</mat-hint>
+        <div fxLayout="column" *ngFor="let config of staticProperties | pipelineElementTemplatePipe"
              class="static-property-panel static-property-panel-border">
             <div fxLayout="row">
                 <div fxFlex="50">
@@ -40,7 +41,7 @@
                 <div fxFlex="50">
                     <div fxLayout="column">
                         <mat-checkbox [checked]="templateConfigs.has(config.internalName)"
-                                      (change)="handleSelection(config)" name="store" class="sp" color="primary">Store
+                                      (change)="handleSelection(config)" name="store" class="sp" color="accent">Store
                             as template
                         </mat-checkbox>
 <!--                        <mat-checkbox *ngIf="templateConfigs.has(config.internalName)"-->
