[STREAMPIPES-559] Allow deletion of pipeline element templates

--- a/ui/src/app/connect/dialog/adapter-template/adapter-template-dialog.component.html
+++ b/ui/src/app/connect/dialog/adapter-template/adapter-template-dialog.component.html
@@ -32,7 +32,7 @@
         <button mat-button mat-raised-button color="accent"
                 (click)="saveTemplate()"
                 style="margin-right: 10px;">
-            Save
+            Create template
         </button>
         <button mat-button mat-raised-button class="mat-basic" (click)="dialogRef.close()">Close</button>
     </div>
