--- a/ui/src/app/core/components/toolbar/toolbar.component.html
+++ b/ui/src/app/core/components/toolbar/toolbar.component.html
@@ -18,18 +18,13 @@
 
 <mat-toolbar class="md-primary md-hue-2 top-nav toolbar-bg">
     <div class="md-toolbar-tools sp-toolbar">
-        <div fxFlex="60" fxLayout fxLayoutAlign="start center">
+        <div fxFlex="100" fxLayout fxLayoutAlign="start center">
             <div class="md-toolbar-tools" style="height:40px;max-height:40px;" fxFlex fxLayout="row" fxLayoutAlign="start center">
                 <div style="padding:5px;border-radius:0px;margin-right:15px;position:relative;left:20px;">
                     <img alt="icon" src="../../../../assets/img/sp/logo-navigation.png" style="height:30px;">
                 </div>
-                <div style="margin-left:30px;">
-                    <span class="active-page">{{activePageName}}</span>
-                </div>
             </div>
-        </div>
-        <span fxFlex></span>
-        <div fxFlex="40" fxLayout fxLayoutAlign="end center" *ngIf="authenticated" style="height:100%;">
+        <div fxFlex fxLayout fxLayoutAlign="end center" *ngIf="authenticated" style="height:100%;">
             <!-- uncomment this to quickly investigate layout issues between dark and light mode -->
 <!--            <div>-->
 <!--                <mat-slide-toggle color="accent" [formControl]="appearanceControl">Dark Mode</mat-slide-toggle>-->
@@ -89,6 +84,7 @@
                     Logout
                 </button>
             </mat-menu>
+        </div>
         </div>
     </div>
 </mat-toolbar>
