[hotfix] Fix toolbar logo size

--- a/ui/src/app/core/components/toolbar/toolbar.component.html
+++ b/ui/src/app/core/components/toolbar/toolbar.component.html
@@ -21,7 +21,7 @@
         <div fxFlex="100" fxLayout fxLayoutAlign="start center">
             <div class="md-toolbar-tools" style="height:40px;max-height:40px;" fxFlex fxLayout="row" fxLayoutAlign="start center">
                 <div style="padding:5px;border-radius:0px;margin-right:15px;position:relative;left:20px;">
-                    <img alt="icon" src="../../../../assets/img/sp/logo-navigation.png" style="height:30px;">
+                    <img alt="icon" src="../../../../assets/img/sp/logo-navigation.png" style="max-height:30px;max-width: 250px;">
                 </div>
             </div>
         <div fxFlex fxLayout fxLayoutAlign="end center" *ngIf="authenticated" style="height:100%;">
