--- a/ui/src/app/assets/components/asset-details/asset-details-panel/asset-link-item/asset-link-item.component.scss
+++ b/ui/src/app/assets/components/asset-details/asset-details-panel/asset-link-item/asset-link-item.component.scss
@@ -16,15 +16,13 @@
  *
  */
 
-.asset-link-item:nth-child(odd) {
-  background: var(--color-bg-1);
+.link-type {
+  background: var(--color-primary);
+  padding: 5px;
+  border-radius: 5px;
 }
 
-.asset-link-item:nth-child(even) {
-  background: var(--color-bg-1);
-}
-
-.asset-link-item {
-  border-bottom: 1px solid var(--color-bg-3);
-  padding: 10px;
+.link-label {
+  margin-right: 15px;
+  font-weight: 500;
 }
