--- a/ui/src/app/assets/components/asset-details/asset-selection-panel/asset-selection-panel.component.html
+++ b/ui/src/app/assets/components/asset-details/asset-selection-panel/asset-selection-panel.component.html
@@ -25,9 +25,11 @@
     </div>
     <div fxFlex="100" fxLayout="column">
         <div fxFlex fxLayout="column" class="designer-panel-config">
-            <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="sp-tree">
+            <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="sp-tree" #tree>
                 <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+                    <div [ngClass]="node.assetId === selectedAsset.assetId ? 'asset-node selected-node' : 'asset-node'">
                     <span (click)="selectNode(node)">{{node.assetName}}</span>
+                    </div>
                 </mat-tree-node>
                 <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
                     <div class="mat-tree-node">
@@ -38,7 +40,9 @@
                                 {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                             </mat-icon>
                         </button>
+                        <div [ngClass]="node.assetId === selectedAsset.assetId ? 'asset-node selected-node' : 'asset-node'">
                         <span (click)="selectNode(node)">{{node.assetName}}</span>
+                        </div>
                     </div>
                     <div [class.sp-tree-invisible]="!treeControl.isExpanded(node)"
                          role="group">
