--- a/ui/src/app/assets/components/asset-overview/asset-overview.component.html
+++ b/ui/src/app/assets/components/asset-overview/asset-overview.component.html
@@ -68,18 +68,24 @@
                                 <td mat-cell *matCellDef="let asset">
                                     <div fxLayout="row">
                             <span fxFlex fxFlexOrder="1" fxLayout="row" fxLayoutAlign="center center">
-                    <button color="accent" mat-button mat-icon-button matTooltip="Show info"
-                            matTooltipPosition="above" (click)="goToDetailsView(asset)"><i
-                            class="material-icons">search</i>
-                    </button>
-                        </span>
-                                        <span fxFlex fxFlexOrder="2" fxLayout="row" fxLayoutAlign="center center">
+                                <button color="accent" mat-button mat-icon-button matTooltip="Show info"
+                                        matTooltipPosition="above" (click)="goToDetailsView(asset)"><i
+                                        class="material-icons">search</i>
+                                </button>
+                            </span>
+                            <span fxFlex fxFlexOrder="2" fxLayout="row" fxLayoutAlign="center center">
+                                <button color="accent" mat-button mat-icon-button matTooltip="Show info"
+                                        matTooltipPosition="above" (click)="goToDetailsView(asset, true)"><i
+                                        class="material-icons">edit</i>
+                                </button>
+                            </span>
+                                        <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
 <!--                    <button color="accent" mat-button mat-icon-button matTooltip="Manage permissions"-->
                                             <!--                            matTooltipPosition="above" (click)="showPermissionsDialog(adapter)"><i-->
                                             <!--                            class="material-icons">share</i>-->
                                             <!--                    </button>-->
                 </span>
-                                        <span fxFlex fxFlexOrder="3" fxLayout="row" fxLayoutAlign="center center">
+                                        <span fxFlex fxFlexOrder="4" fxLayout="row" fxLayoutAlign="center center">
                     <button color="accent" mat-button mat-icon-button matTooltip="Delete adapter"
                             data-cy="delete" matTooltipPosition="above" (click)="deleteAsset(asset)">
                         <i class="material-icons">delete</i>
