--- a/ui/src/app/assets/dialog/edit-asset-link/edit-asset-link-dialog.component.scss
+++ b/ui/src/app/assets/dialog/edit-asset-link/edit-asset-link-dialog.component.scss
@@ -16,15 +16,4 @@
  *
  */
 
-.asset-link-item:nth-child(odd) {
-  background: var(--color-bg-1);
-}
-
-.asset-link-item:nth-child(even) {
-  background: var(--color-bg-1);
-}
-
-.asset-link-item {
-  border-bottom: 1px solid var(--color-bg-3);
-  padding: 10px;
-}
+@import 'src/scss/sp/sp-dialog';
