[STREAMPIPES-545] Allow to remove and edit nodes

--- a/ui/src/app/assets/components/asset-details/asset-details.component.html
+++ b/ui/src/app/assets/components/asset-details/asset-details.component.html
@@ -38,6 +38,7 @@
                         class="designer-panel">
                 <div fxLayout="column" fxFlex="100">
                     <sp-asset-selection-panel-component
+                            [editMode]="editMode"
                             [assetModel]="asset"
                             [selectedAsset]="selectedAsset"
                             (selectedAssetEmitter)="selectedAsset = $event">
