--- a/ui/src/app/assets/components/asset-details/asset-selection-panel/asset-selection-panel.component.html
+++ b/ui/src/app/assets/components/asset-details/asset-selection-panel/asset-selection-panel.component.html
@@ -27,8 +27,21 @@
         <div fxFlex fxLayout="column" class="designer-panel-config">
             <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="sp-tree" #tree>
                 <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-                    <div [ngClass]="node.assetId === selectedAsset.assetId ? 'asset-node selected-node' : 'asset-node'">
-                    <span (click)="selectNode(node)">{{node.assetName}}</span>
+                    <div [ngClass]="node.assetId === selectedAsset.assetId ? 'asset-node selected-node' : 'asset-node'"
+                         fxLayout="row" fxFlex="100">
+                        <span (click)="selectNode(node)" fxLayoutAlign="end center">{{node.assetName}}</span>
+                        <div fxLayoutAlign="end center" fxFlex *ngIf="editMode">
+                            <button mat-button
+                                    mat-icon-button
+                                    (click)="addAsset(node)"
+                                    color="accent">
+                                <i class="material-icons">add</i></button>
+                            <button mat-button
+                                    mat-icon-button
+                                    (click)="deleteAsset(node)"
+                                    color="accent">
+                                <i class="material-icons">delete</i></button>
+                        </div>
                     </div>
                 </mat-tree-node>
                 <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
@@ -40,8 +53,16 @@
                                 {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                             </mat-icon>
                         </button>
-                        <div [ngClass]="node.assetId === selectedAsset.assetId ? 'asset-node selected-node' : 'asset-node'">
-                        <span (click)="selectNode(node)">{{node.assetName}}</span>
+                        <div [ngClass]="node.assetId === selectedAsset.assetId ? 'asset-node selected-node' : 'asset-node'"
+                             fxLayout="row" fxFlex="100">
+                            <span (click)="selectNode(node)" fxLayoutAlign="start center">{{node.assetName}}</span>
+                            <div fxLayoutAlign="end center" fxFlex *ngIf="editMode">
+                                <button mat-button
+                                        mat-icon-button
+                                        (click)="addAsset(node)"
+                                        color="accent">
+                                    <i class="material-icons">add</i></button>
+                            </div>
                         </div>
                     </div>
                     <div [class.sp-tree-invisible]="!treeControl.isExpanded(node)"
