--- a/ui/src/app/assets/components/asset-details/asset-details-panel/asset-link-item/asset-link-item.component.scss
+++ b/ui/src/app/assets/components/asset-details/asset-details-panel/asset-link-item/asset-link-item.component.scss
@@ -26,3 +26,11 @@
   margin-right: 15px;
   font-weight: 500;
 }
+
+.link-icon {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  color: var(--color-bg-1);
+}
