--- a/ui/src/app/assets/components/asset-details/asset-details.component.html
+++ b/ui/src/app/assets/components/asset-details/asset-details.component.html
@@ -22,7 +22,7 @@
     <div nav fxFlex="100" fxLayoutAlign="start center" fxLayout="row" class="pl-10">
         <div fxLayout="row" fxLayoutAlign="start center" *ngIf="editMode">
             <button mat-button mat-raised-button color="accent" (click)="updateAsset()">
-                <i class="material-icons">add</i><span>&nbsp;Save</span>
+                <i class="material-icons">save</i><span>&nbsp;Save</span>
             </button>
         </div>
         <div fxFlex fxLayout="row" fxLayoutAlign="end center">
