--- a/ui/src/scss/_variables.scss
+++ b/ui/src/scss/_variables.scss
@@ -35,5 +35,6 @@ body {
   --color-dashboard: rgb(76, 115, 164);
   --color-adapter: rgb(182, 140, 97);
   --color-stream: $sp-color-stream;
+  --color-pipeline: rgb(102, 185, 114);
 
 }
