--- a/ui/src/app/assets/dialog/edit-asset-link/edit-asset-link-dialog.component.html
+++ b/ui/src/app/assets/dialog/edit-asset-link/edit-asset-link-dialog.component.html
@@ -20,17 +20,17 @@
 <div class="sp-dialog-container">
     <div class="sp-dialog-content p-15">
         <div fxFlex="100" fxLayout="column" *ngIf="clonedAssetLink">
-            <div fxFlex style="margin:5px;width:100%" fxLayout="column">
+            <div fxLayout="column" class="link-configuration link-type-selection">
                 <mat-form-field color="accent">
                     <mat-label>Link Type</mat-label>
-                    <mat-select fxFlex [(value)]="clonedAssetLink.linkType"
+                    <mat-select fxFlex [(value)]="selectedLinkType"
                                 required (selectionChange)="onLinkTypeChanged($event)">
                         <mat-option *ngFor="let assetLinkType of assetLinkTypes"
-                                    [value]="assetLinkType.linkQueryHint">{{assetLinkType.linkLabel}}</mat-option>
+                                    [value]="assetLinkType">{{assetLinkType.linkLabel}}</mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
-            <div *ngIf="selectedLinkType === 'pipeline'" fxLayout="column">
+            <div *ngIf="selectedLinkType.linkType === 'pipeline'" fxLayout="column" class="link-configuration">
                 <mat-form-field color="accent" fxFlex="100">
                     <mat-label>Pipelines</mat-label>
                     <mat-select [(ngModel)]="currentResource"
@@ -41,7 +41,7 @@
                     </mat-select>
                 </mat-form-field>
             </div>
-            <div *ngIf="selectedLinkType === 'dashboard'" fxLayout="column">
+            <div *ngIf="selectedLinkType.linkType === 'dashboard'" fxLayout="column" class="link-configuration">
                 <mat-form-field color="accent" fxFlex="100">
                     <mat-label>Dashboards</mat-label>
                     <mat-select (selectionChange)="changeLabel($event.value._id, $event.value.name, $event.value)"
@@ -53,7 +53,7 @@
                     </mat-select>
                 </mat-form-field>
             </div>
-            <div *ngIf="selectedLinkType === 'data-view'" fxLayout="column">
+            <div *ngIf="selectedLinkType.linkType === 'data-view'" fxLayout="column" class="link-configuration">
                 <mat-form-field color="accent" fxFlex="100">
                     <mat-label>Data Views</mat-label>
                     <mat-select (selectionChange)="changeLabel($event.value._id, $event.value.name, $event.value)"
@@ -65,10 +65,10 @@
                     </mat-select>
                 </mat-form-field>
             </div>
-            <div *ngIf="selectedLinkType === 'measurement'" fxLayout="column">
+            <div *ngIf="selectedLinkType.linkType === 'measurement'" fxLayout="column" class="link-configuration">
                 <mat-form-field color="accent" fxFlex="100">
                     <mat-label>Data Lake Storage</mat-label>
-                    <mat-select (selectionChange)="changeLabel($event.value._id, $event.value.name, $event.value)"
+                    <mat-select (selectionChange)="changeLabel($event.value.elementId, $event.value.measureName, $event.value)"
                                 [(value)]="currentResource"
                                 fxFlex
                                 required>
@@ -77,7 +77,13 @@
                     </mat-select>
                 </mat-form-field>
             </div>
-            <div fxFlex="100" fxLayout="column">
+            <div fxLayout="column" class="link-configuration">
+                <mat-form-field color="accent">
+                    <mat-label>Label</mat-label>
+                    <input matInput [(ngModel)]="clonedAssetLink.linkLabel" required>
+                </mat-form-field>
+            </div>
+            <div fxLayout="column" class="link-configuration">
                 <mat-form-field color="accent">
                     <mat-label>Resource ID</mat-label>
                     <input matInput [(ngModel)]="clonedAssetLink.resourceId" required [disabled]="true">
