--- a/ui/src/app/assets/dialog/edit-asset-link/edit-asset-link-dialog.component.scss
+++ b/ui/src/app/assets/dialog/edit-asset-link/edit-asset-link-dialog.component.scss
@@ -17,3 +17,14 @@
  */
 
 @import 'src/scss/sp/sp-dialog';
+
+.link-type-selection {
+}
+
+.link-configuration {
+  padding: 10px;
+  width:100%;
+  margin:5px;
+  background: var(--color-bg-1);
+  border: 1px solid var(--color-bg-3);
+}
